# vnd

./: .dockerignore  .env.example  .gitattributes  .gitignore  BARTOSZ_TUTAJ.md  DEPLOYMENT.md  DOCKER-DEPLOYMENT-SUMMARY.md  DOCKER-INDEX.md  DOCKER-REFERENCE.md  Dockerfile.backend  Dockerfile.frontend  GIT-SETUP.md  LM-STUDIO-CHECKLIST.md  LM-STUDIO-DEPLOYMENT-SUMMARY.md  LM-STUDIO-README.txt  LM-STUDIO-SETUP.md  PRE-DEPLOYMENT-CHECKLIST.md  README.md  SETUP-COMPLETE.txt  dashboard.py  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
infra/terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/terraform/templates/: cloud-init.yml.tftpl
scripts/: README.md  aws-reload-frontend.sh  aws-run-local-lm-pipeline.sh  aws-start.sh  aws-stop.sh  open-lmstudio-aws-tunnel.ps1  run-local-pipeline.ps1  run-local-pipeline.sh  sync-and-publish-ready.ps1
src/agentic_seller/: __init__.py  analyzer.py  api.py  cli.py  config.py  ingest.py  models.py  orchestrator.py
src/agentic_seller/marketplaces/: __init__.py  base.py  facebook.py  olx.py
