[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-seller"
version = "0.1.0"
description = "Agentic framework for automated marketplace listing creation and posting"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.75.0",
  "playwright>=1.52.0",
  "python-dotenv>=1.0.1",
  "pydantic>=2.11.0",
  "rich>=14.0.0",
  "python-docx>=1.1.2",
  "Pillow>=10.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
